[package]
name = "kessler"
version = "0.1.0"
authors = ["khemritolya <lrh74@cornell.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "*", features = ["image"]}
vulkano = "0.22.0"

[profile.dev]
opt-level = 3