[package]
name = "kessler"
version = "0.1.0"
authors = ["khemritolya <lrh74@cornell.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "0.8.1", features = ["image"]}
rand = "0.8.3"

[profile.dev]
opt-level = 3
lto = "thin"